--- a/vignettes/M1_gmod_intro_markov_tutorial.Rmd
+++ b/vignettes/M1_gmod_intro_markov_tutorial.Rmd
@@ -31,7 +31,7 @@ library(gmod)
 
 The Markov model involves a cost-effectiveness example with 4 decisions and 4 states. For more details on the model, please refer to the reference above. First we define the gmod object and the layers. 
 ```{r}
-mygmod <- gmod() + 
+gmod(name = "mygmod") + 
   decisions("StandardOfCare", "StrategyA", "StrategyB", "StrategyAB") + 
   states(names = c("H", "S1", "S2", "D"), init_probs = c(1,0,0,0)) +  
   event(name = "get_event",  
@@ -73,6 +73,7 @@ params <- list(
           u_D = 0,
           u_trtA = 0.95
 )
+list2env(params, envir = .GlobalEnv)
 ```
 
 
@@ -170,16 +171,14 @@ utility <- function(state, decision){
 Then, we build the gmod Markov model by using the `gmod_gen_model_function()` function.
 The output is the structure of the model including the formulae.  
 
-To evaluate the model, we run `gmod_evaluate()` which returns the numerical outcomes. 
-The model structure can also be returned directly from the 
+To evaluate the functions, we run `gmod_evaluate_functions()` which returns a set of datasets evaluating the functions. 
+
 ```{r}
-model_struc <- gmod_gen_model_function(mygmod)
-#model_res
+gmod_evaluate_functions(mygmod)
 ```
 
 ```{r}
-n_cycles <- 75
-model_res <- my_markov_model(model_struc, params, return_trace = T)
+model_res <- my_markov_model(mygmod, n_cycles = 75, params = params, return_trace = T)
 ```
 
 The warning just indicates that no parameters were passed, so gmod uses the values in the global environment.  For analyses, such as probabilistic sensitivity analysis (PSA), we can pass the parameters as a list `param`. 
